Fixed czech letters for cursive font on mobile Chrome

--- a/css/generic/main.css
+++ b/css/generic/main.css
@@ -94,8 +94,7 @@ p.result {
 }
 
 .introduction {
-    font-family: "Brush Script MT", "Brush Script Std", "Lucida Calligraphy", "Lucida Handwriting", "Apple Chancery", cursive;
-    font-style: italic;
+    font-family: 'Courgette', 'Marck Script', 'Satisfy', 'Jim Nightshade', 'Dancing Script', cursive;
     font-size: 0.9em;
     text-indent: 1em;
     margin-bottom: 1em;
